Registro de usuarios, se agregaron los roles a un usuario, validaciones para los usuarios

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,4 +5,15 @@ body{
     justify-content: center;
     align-items: center;
   }
+
+  .main-content-yield{
+    padding-top: 1.3%;
+    padding-bottom: 3%;
+  }
+
+  .align-right{
+    text-align: right;
+  }
+
+  
 }
