--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -9,7 +9,7 @@
                 %strong.font-bold 
                 = current_user.name
               %span.text-muted.text-xs.block
-                = current_user.email
+                Stcarga App
                 %b.caret
           %ul.dropdown-menu.animated.fadeInRight.m-t-xs
             %li
