--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -4,6 +4,7 @@
       .ibox.float-e-margins
         .ibox-title
           %h5
-            Creando usuario
+            Editando usuario
+            = @user.name
         .ibox-content
           = render 'form'
