--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -5,6 +5,7 @@ $blue: #1c84c6;       // Success color
 $lazur: #23c6c8;      // Info color
 $yellow: #f8ac59;     // Warning color
 $red: #ED5565;        // Danger color
+$green: #1ab394;      // Sucess
 
 // Various colors
 $text-color: #676a6c;   // Body text
