--- a/app/views/layouts/_logout.html.haml
+++ b/app/views/layouts/_logout.html.haml
@@ -1,3 +1,3 @@
-%a{href: destroy_user_session_path, 'data-method': 'delete', 'data-confirm': '¿Seguro que quieres salir de la plataforma?', rel: 'nofollow'}
-  %i.fa.fa-sign-out
-  Cerrar Sesión
+= link_to_logout_helper
+
+
