--- a/app/views/containers/index.html.haml
+++ b/app/views/containers/index.html.haml
@@ -2,17 +2,17 @@
   .col-sm-12
     .ibox
       .ibox-content
-        .col-md-12.no-padding
+        .col-md-12.no-padding.mb-7
           .col-md-9.no-padding
             %h2 Lista de contenedores
-          %button.btn.btn-info.pull-right{"data-target" => "#new_container", "data-toggle" => "modal", :type => "button"}
+          %button.btn.btn-white.pull-right{"data-target" => "#new_container", "data-toggle" => "modal", :type => "button"}
             Crear nuevo
         = smart_listing_controls_for(:containers) do
-          .input-group.filter
+          .input-group.filter.mb-7
             %input.input.form-control{:placeholder => 'Buscar contenedor...', type: 'text', name: 'filter'}/
             %span.input-group-btn
               %button.btn.btn.btn-primary{:type => 'submit'}
                 %span.glyphicon.glyphicon-search
                 Buscar
-        .full-height
+        .auto-height
           = smart_listing_render :containers
