--- a/app/views/containers/new.html.haml
+++ b/app/views/containers/new.html.haml
@@ -3,6 +3,6 @@
     .ibox.float-e-margins
       .ibox-title
         %h5
-          Creando container
+         Creando container
       .ibox-content
-        = render 'form'
+        = render 'form
