--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -12,5 +12,5 @@
               %button.btn.btn.btn-primary{:type => 'submit'}
                 %span.glyphicon.glyphicon-search
                 Buscar
-        .full-height
+        .auto-height
           = smart_listing_render :users
