--- a/app/views/containers/new.html.haml
+++ b/app/views/containers/new.html.haml
@@ -2,7 +2,6 @@
   .col-lg-12
     .ibox.float-e-margins
       .ibox-title
-        %h5
-         Creando container
+        %h5 Creando container
       .ibox-content
-        = render 'form
+        = render 'form'
