--- a/app/views/containers/index.html.haml
+++ b/app/views/containers/index.html.haml
@@ -5,11 +5,12 @@
         .col-md-12.no-padding.mb-7
           .col-md-9.no-padding
             %h2 Lista de contenedores
-          %button.btn.btn-white.pull-right{"data-target" => "#new_container", "data-toggle" => "modal", :type => "button"}
-            Crear nuevo
+          - if @user.present?
+            %button.btn.btn-white.pull-right{"data-target" => "#new_container", "data-toggle" => "modal", :type => "button"}
+              Crear nuevo
         = smart_listing_controls_for(:containers) do
           .input-group.filter.mb-7
-            %input.input.form-control{:placeholder => 'Buscar contenedor...', type: 'text', name: 'filter'}/
+            %input.input.form-control{:placeholder => 'Buscar contenedor por codigo del contenedor...', type: 'text', name: 'filter'}/
             %span.input-group-btn
               %button.btn.btn.btn-primary{:type => 'submit'}
                 %span.glyphicon.glyphicon-search
