--- a/app/views/containers/index.html.haml
+++ b/app/views/containers/index.html.haml
@@ -5,13 +5,14 @@
         .col-md-12.no-padding.mb-7
           .col-md-9.no-padding
             %h2 Lista de contenedores
-          - if @user.present?
-            %button.btn.btn-white.pull-right{"data-target" => "#new_container", "data-toggle" => "modal", :type => "button"}
-              Crear nuevo
         = smart_listing_controls_for(:containers) do
           .input-group.filter.mb-7
             %input.input.form-control{:placeholder => 'Buscar contenedor por codigo del contenedor...', type: 'text', name: 'filter'}/
             %span.input-group-btn
+              - if @user.present?
+                %button.btn.btn-white{onclick: 'open_modal("#new_container")', type:'button'}
+                  %span.glyphicon.glyphicon-plus
+                  Nuevo
               %button.btn.btn.btn-primary{:type => 'submit'}
                 %span.glyphicon.glyphicon-search
                 Buscar
