--- a/app/views/menu/_admin.html.haml
+++ b/app/views/menu/_admin.html.haml
@@ -33,3 +33,12 @@
   %ul{:class => "nav nav-second-level collapse #{is_active_controller('drivers', 'in')}"}
     %li{:class => is_active_action('new')}= link_to 'Nuevo conductor', new_driver_path
     %li{:class => is_active_action('index')}= link_to 'Ver conductores', drivers_path
+
+%li{class: is_active_controller('imports')}
+  = link_to imports_path do
+    %i.fa.fa-ship
+    %span.nav-label Importaciones
+    %span.fa.arrow
+  %ul{:class => "nav nav-second-level collapse #{is_active_controller('imports', 'in')}"}
+    %li{:class => is_active_action('new')}= link_to 'Nueva importación', new_import_path
+    %li{:class => is_active_action('index')}= link_to 'Ver importaciones', imports_path
