--- a/app/views/users/_show_tabs.html.haml
+++ b/app/views/users/_show_tabs.html.haml
@@ -20,3 +20,8 @@
             = render partial: 'containers/short_form'
           .col-md-12
             = render template: 'containers/index'
+.row.mt-20
+  .col-md-12
+    = render partial: 'imports/short_form'
+  .col-md-12
+    = render template: 'imports/index'
