--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,8 +5,7 @@
     .col-sm-12
       .ibox
         .ibox-title
-          %i.fa.fa-user
+          %i.fa.fa-user-circle
           Perfil
         .ibox-content
-
           = render partial: 'user_profile.html.haml'
