--- a/app/views/users/_users_list.html.haml
+++ b/app/views/users/_users_list.html.haml
@@ -35,7 +35,8 @@
           %i.fa.fa-eye
         %a.btn.btn-warning.btn-sm{href: edit_user_path(user)}
           %i.fa.fa-pencil
-        = link_to_delete_helper(user_path(user), user.name)
+        - if current_user.has_role? :admin
+          = link_to_delete_helper(user_path(user), user.name)
 
 
 - else
