import products filter is added

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -65,6 +65,13 @@ body{
   .auto-height{
     height: auto !important;
   }
+
+  .form-control-inline {
+     width: auto;
+     float:left;
+     margin-right: 5px;
+  }
+  
 }
 
 
